--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 pandas
+numpy
+matplotlib
 SQLite_ORM[pandas_addon] @ git+https://github.com/LoloCG/Lolos_Packages.git#subdirectory=Databases/SQLite_ORM
 git+https://github.com/LoloCG/Lolos_Packages.git#subdirectory=Data_Analysis
